2001-09-06  Jeff Hobbs  <jeffh@ActiveState.com>

	* doc/http.n: noted -binary, charset and coding state keys.
	* tests/http.test:
	* library/http/pkgIndex.tcl:
	* library/http/http.tcl (geturl): correctly get charset parameter
	and convert text according to specified encoding (if known).  RFC
	iso8859-1 is used by default.  Also recognize Content-encoding to
	see if we should do binary translation.  Added a CYA -binary
	switch for the cases that were missed. [Bug #219211 #219399]

	* tests/ioUtil.test: changed to make better use of constraints and
	remove knownBug constraints that weren't valid.

2001-09-01  David Gravereaux <davygrvy@pobox.com>

	-=[ Tcl_Async* API merge from HEAD ]=-

	* generic/tclInt.decls:  Removed TclpAsyncMark permanently and left
	the hole not to upset the positions.

	* generic/tclDecls.h:
	* generic/tclIntDecls.h:
	* generic/tclIntPlatDecls.h:
	* generic/tclPlatDecls.h:
	* generic/tclStubInit.c:  regen'd tables.

	* generic/tclAsync.c:  Brought source to match -r1.6 on the HEAD branch.

	* generic/tclEvent.c:
	* generic/tclInt.h: Added prototype to and use of new TclFinalizeAsync()
	found in tclAsync.c.

	* unix/tclUnixPort.h:
	* mac/tclMacPort.h: removed #defines for TclpAsyncMark.

	* win/tclWinInit.c:  Removed the TclpAsyncMark function and the thread ID
	saving that was going on in TclpInitPlatform(). [the old hack]

	* win/tclWinThread.c:  TclpFinalizeCondition() and TclpFinalizeMutex()
	are now properly returning the old CriticalSection handle to the system.
	Tcl_CreateThread() is now decrementing its handle reference, so the
	system will recover resources when the thread closes (doh!).  These
	changes are all already up on the HEAD.

	* doc/Async.3:  matches HEAD.

2001-08-30  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tclIndexObj.c: fixed some casting problems that upset
	Crays. [Bug #419528] (andreasen)

	* tests/httpd (httpdRespond): added response to timeout value in
	query string.
